new changes added

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
     <!-- Page Header -->
     <header class="header">
         <div class="overlay">
+            <!-- <h1 class="title">HIGHEST LAMP</h1> -->
+            <div class="title">
+                <h1 class="title-1">HIGHEST</h1> 
+                <h1 class="title-2">LAMP</h1>
+            </div>
             <h1 class="subtitle">We build for you</h1>
-            <h1 class="title">Highest Lamp</h1>
         </div>
         <div class="shape">
             <svg viewBox="0 0 1500 200">
