image to html tag added for logo added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with LeadMark landing page.">
     <meta name="author" content="Devcrud">
-    <title>highestlamp</title>
+    <title>Highest Lamp</title>
+    <link rel="icon" type="image/png" href="assets/imgs/favicon.png" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + LeadMark main styles -->
 	<link rel="stylesheet" href="assets/css/leadmark.css">
 	  <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css' rel='stylesheet'>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -18,9 +20,10 @@
     <!-- page Navigation -->
     <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/imgs/logo.png" alt="">
-            </a>
+            <div class="logo">
+                <h1 class="logo-1">HIGHEST</h1> 
+                <h1 class="logo-2">LAMP</h1>
+            </div>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,6 +49,8 @@
         </div>
     </nav>
     <!-- End Of Second Navigation -->
+
+    
 
     <!-- Page Header -->
     <header class="header">
@@ -118,13 +123,14 @@
         </div>
     </section>
     <!-- End OF Service Section -->
+    
 
     <!-- About Section -->
     <section class="section" id="about">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
-                    <h6 class="section-title mb-0">About Company</h6>
+                    <h6 class="section-title mb-0">About Team</h6>
                     <!-- <h6 class="section-subtitle mb-4">Architecto provident deserunt</h6> -->
                    <p>In a quickly changing and evolving world, the challenges you face are ever more unique and complex. To find solutions, you need forward-thinking, agile, caring partners that can help you transform, adapt, and build. At highestlamp, we excel at digital product engineering and deliver on our promise of thinking breakthroughs.</p>
                     <img src="assets/imgs/30.jpg" alt="" class="w-100 mt-3 shadow-sm">
