team about added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
                     <h6 class="section-title mb-0">About Team</h6>
                     <!-- <h6 class="section-subtitle mb-4">Architecto provident deserunt</h6> -->
-                   <p>In a quickly changing and evolving world, the challenges you face are ever more unique and complex. To find solutions, you need forward-thinking, agile, caring partners that can help you transform, adapt, and build. At highestlamp, we excel at digital product engineering and deliver on our promise of thinking breakthroughs.</p>
+                   <p>At Highest Lamp, we are a team of dedicated IT professionals with a passion for building innovative solutions that help our clients succeed. We offer a wide range of services, including web development, app development, and IoT solutions, and we are committed to delivering high-quality work that meets the specific needs of each of our clients.</p>
                     <img src="assets/imgs/30.jpg" alt="" class="w-100 mt-3 shadow-sm">
                 </div>
                 <div class="col-md-6 pl-md-5">
@@ -144,10 +144,10 @@
                             <img src="assets/imgs/31.jpg" alt="" class="w-100 shadow-sm">
                         </div>
                         <div class="col-12 mt-4">
-                            <p>There are probably a million other businesses that sell what you're selling, but no one else shares your story. Your story is what makes you unique. Don't just write numbers and dates; let your prospects know who you really are. Be vulnerable and tell them why you started your business.</p>
-                            <p><b>"Across the globe, one thing is universally true of the people of Accenture: We care deeply about what we do and the impact we have with our clients and communities. It is personal to all of us."</b><br>
-                            </p>
-                            <p>Founded in 1989, ScienceSoft is a provider of IT consulting and software development services. Having started as a small AI product company, we switched to IT services in 2002 and ever since we have helped non-IT organizations and software product companies improve business performance and quickly win new customers.</p>
+                            <p>Our team has a wealth of experience in the IT industry, and we are constantly staying up-to-date on the latest technologies and best practices to ensure that we are providing the best possible solutions for our clients. We believe in building long-term relationships with our clients and providing ongoing support to ensure their success.</p>
+                            <!-- <p><b>"Across the globe, one thing is universally true of the people of Accenture: We care deeply about what we do and the impact we have with our clients and communities. It is personal to all of us."</b><br>
+                            </p> -->
+                            <p> At Highest Lamp, our motto is "We build for you," and we take this commitment to heart in everything we do. We are proud to be a trusted partner for businesses and organizations looking to leverage the power of technology to achieve their goals.</p>
                         </div>
                     </div>
                 </div>
